# ics-pa-sv

./: .gitattributes  .gitignore  00-conda-setup.bat  00-conda-setup.sh  01-pip-setup.bat  01-pip-setup.sh  02-add-to-pythonpath.bat  02-add-to-pythonpath.sh  10-start-notebook-as-student.bat  10-start-notebook-as-student.sh  20-validate-assignment.bat  20-validate-assignment.sh  25-create-submission-archive.py  README.md  environment.yml  nbgrader_config.py  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile_conda  devcontainer.json  devcontainer_conda.json
assignment/problem_0/: .gitignore  task_0-1_introduction_to_python.ipynb  task_0-2_introduction_to_pytorch.ipynb  task_0-3_introduction_to_jax.ipynb
assignment/problem_1/: task_1-5_SNN_warmup.ipynb  task_1a_extract_dataset.ipynb  task_1a_generate_data.ipynb  task_1b_train_NN.ipynb  task_1b_train_neural_network.ipynb  utils.py
assignment/problem_1/datasets/: .gitignore
assignment/problem_2/: controllers.ipynb  ilc.py  ilc_analysis.py  linearization.ipynb  lnn.ipynb  lnn_analysis.py  lnn_training.ipynb  task_2a-1_pd_control.ipynb  task_2a-2_pd_plus_gravity_compensation_control.ipynb  task_2a-3_pd_plus_feedforward_control.ipynb  task_2a-4_pd_plus_control.ipynb  task_2a-5_inverse_dynamics_control.ipynb  task_2b_using_sensing_for_control.ipynb  task_2c-1_collect_dataset.ipynb  task_2c-2_implement_lnn.ipynb  task_2c-3_train_lnn.ipynb  task_2c-4_rollout_learned_dynamics.ipynb  task_2c-5_control_with_learned_dynamics.ipynb  task_2d-1_linearization.ipynb  task_2d-2_pd_ilc.ipynb  task_2d-3_q_ilc.ipynb
assignment/problem_2/statedicts/: best_model_cnn.pt
assignment/problem_3/: task_3a_familiarization_gp_single_input.ipynb  task_3b_familiarization_gp_multiple_inputs.ipynb  task_3c_dataset_generation_for_robot.ipynb  task_3d_fit_forward_dynamic_with_gp.ipynb  task_3e_fit_forward_dynamic_with_mlp.ipynb  task_3f-1_behavioural_cloning_torques_configuration_input.ipynb  task_3f-2_behavioural_cloning_torques_state_input.ipynb  task_3f_behavioural_cloning_torques_configuration_input.ipynb  task_3g_behavioural_cloning_reference_trajectory.ipynb  task_3h_open_questions.ipynb  utils.py
assignment/problem_3/datasets/: tensile_strenght.txt
jax_double_pendulum/: __init__.py  dynamics.py  integrators.py  robot_parameters.py  robot_simulation.py  utils.py
jax_double_pendulum/analysis/: __init__.py  actuation_plots.py  trajectory_following_error_metrics.py  trajectory_following_plots.py
jax_double_pendulum/kinematics/: __init__.py  forward_kinematics.py  inverse_kinematics.py  jacobian.py  jacobian_dot.py
jax_double_pendulum/motion_planning/: __init__.py  trajectory_generator.py  trajectory_parameters.py
jax_double_pendulum/scripts/: symbolic_derivation.py
jax_double_pendulum/visualization/: __init__.py  robot_animation.py  robot_rendering.py
