[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ics_pa"
description="Practical Assignment for the course Intelligent Control Systems at Delft University of Technology"
version = "0.0.4"
authors = [
    { name = "Maximilian Stölzle", email = "M.W.Stolzle@tudelft.nl"},
    { name = "Chuhan Zhang", email = "C.Zhang-8@tudelft.nl" },
    { name = "Lorenzo Lyons", email = "L.Lyons@tudelft.nl" },
    { name = "Giovanni Franzese", email = "G.Franzese@tudelft.nl" },
    { name = "Tomás Coleman", email = "T.Coleman@tudelft.nl" },
    { name = "Jingyue Liu", email = "J.Liu-14@tudelft.nl" },
]
requires-python = ">=3.10.0,<3.14.0"
dependencies = [
    "dill",
    "gpytorch",  # used for gaussian processes
    "flax==0.8.2",
    "jax==0.4.25",
    "jaxlib==0.4.25",
    "jaxtyping==0.2.28",
    "imageio",
    "ipympl", # used for interactive plots in notebooks
    "ipynb", # used for importing modules from notebooks
    "ipykernel",
    "matplotlib",
    "nbgrader",
    "numpy==1.26.4",
    "chex==0.1.86",
    "optax==0.2.1",
    "orbax-checkpoint==0.5.7",
    "opencv-python",
    "pandas",
    "pathos",
    "progressbar2",
    "pyyaml",
    "pyqt5",
    "seaborn",
    "scipy",
    "tensorboard",
    "torch",
    "torchvision",
    "tqdm",
]
license = {text = "MIT"}
classifiers = [  # Optional
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        'Development Status :: 3 - Alpha',

        # Indicate who your project is intended for
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Build Tools',

        # Pick your license as you wish
        'License :: OSI Approved :: MIT License',

        # Specify the Python versions you support here. In particular, ensure
        # that you indicate you support Python 3. These classifiers are *not*
        # checked by 'pip install'. See instead 'python_requires' below.
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3 :: Only",
]
# dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "bump2version",
    "coverage",
    "flake8",
    "gymnasium[classic_control]",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "sympy",
    "tox",
]

[tool.setuptools.packages.find]
exclude = [
    "assignment",
    "autograded",
    "autograded.*",
    "build",
    "build.*",
    "ci-setup",
    "examples",
    "examples.*",
    "feedback",
    "feedback.*",
    "release",
    "release.*",
    "source",
    "source.*",
    "tests",
    "tests.*",
]

[tool.black]
# https://github.com/psf/black
target-version = ["py312"]
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''
